--- a/packages/server/ormconfig.json
+++ b/packages/server/ormconfig.json
@@ -15,12 +15,8 @@
   },
   {
     "name": "default",
-    "type": "postgres",
-    "host": "localhost",
-    "port": 5432,
-    "username": "postgres",
-    "password": "postgres",
-    "database": "example12",
+    "type": "sqlite",
+    "database": ":memory:",
     "synchronize": true,
     "logging": false,
     "entities": ["src/entity/**/*.ts"],
