--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@vitalic-classic/node",
+  "name": "@vitalic-classic/server",
   "private": true,
   "version": "1.0.16",
   "description": "Awesome project developed with TypeORM.",
@@ -9,23 +9,35 @@
     "@types/node": "^11.11.2",
     "cross-env": "^5.2.0",
     "jest": "^24.5.0",
-    "ts-jest": "^24.0.0"
+    "ts-jest": "^24.0.0",
+    "ts-node-dev": "^1.0.0-pre.44"
   },
   "dependencies": {
     "@vitalic-classic/common": "^1.0.16",
+    "apollo-server-express": "^2.9.16",
+    "apollo-server-fastify": "^2.9.16",
+    "faker": "^4.1.0",
+    "fastify": "^2.11.0",
+    "fastify-auth0-verify": "^0.2.0",
+    "fastify-caching": "^5.0.0",
+    "fastify-cookie": "^3.5.0",
+    "fastify-server-session": "^3.0.1",
+    "graphql-jit": "^0.4.2",
     "ioredis": "^4.6.2",
     "pg": "^7.3.0",
     "reflect-metadata": "^0.1.10",
+    "sqlite3": "^4.1.1",
     "ts-node": "^8.0.3",
     "typeorm": "0.2.15-rc.2",
     "typescript": "^3.6"
   },
   "scripts": {
-    "start": "ts-node src/index.ts",
+    "start": "ts-node-dev --no-notify src/index.ts",
     "test": "cross-env NODE_ENV=test jest",
     "ci:test": "JEST_JUNIT_OUTPUT=$TEST_OUTPUT/node.xml jest --ci --runInBand --detectOpenHandles --forceExit --testResultsProcessor=jest-junit",
     "ci:deploy": "npm run heroku:deploy",
-    "heroku:deploy": "git push https://heroku:$HEROKU_API_KEY@git.heroku.com/insolution-prod.git master"
+    "heroku:deploy": "git push https://heroku:$HEROKU_API_KEY@git.heroku.com/insolution-prod.git master",
+    "typeorm": "ts-node ./node_modules/typeorm/cli.js"
   },
   "workspaces": {
     "nohoist": [
