--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -1,12 +1,23 @@
 {
-  "name": "@vitalic-classic/react",
+  "name": "@vitalic-classic/web",
   "version": "1.0.16",
   "private": true,
   "dependencies": {
+    "@auth0/auth0-spa-js": "^1.6.3",
+    "@commitlint/cli": "^8.0.0",
+    "@commitlint/config-conventional": "^8.0.0",
+    "@material-ui/core": "^4.6.1",
     "@vitalic-classic/common": "^1.0.16",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-react": "^7.12.4",
+    "husky": "^3.0.9",
+    "lerna": "^3.15.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
-    "react-scripts": "3.2.0"
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.3.0",
+    "typescript": "^3.7.2"
   },
   "scripts": {
     "start": "cross-env SKIP_PREFLIGHT_CHECK=true react-scripts start",
@@ -17,9 +28,6 @@
     "ci:deploy": "npm run heroku:deploy",
     "heroku:deploy": "git push https://heroku:$HEROKU_API_KEY@git.heroku.com/insulution-web.git master"
   },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
   "browserslist": [
     ">0.2%",
     "not dead",
@@ -27,11 +35,16 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@types/history": "^4.7.4",
     "@types/jest": "^24.0.23",
     "@types/node": "^12.12.7",
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.4",
+    "@types/react-router-dom": "^5.1.3",
     "cross-env": "^5.2.0",
+    "eslint": "^6.8.0",
+    "prettier": "^1.19.1",
     "typescript": "^3.7.2"
-  }
+  },
+  "proxy": "http://localhost:3001"
 }
