--- a/packages/server/ormconfig.json
+++ b/packages/server/ormconfig.json
@@ -18,7 +18,7 @@
     "type": "sqlite",
     "database": ":memory:",
     "synchronize": true,
-    "logging": false,
+    "logging": true,
     "entities": ["src/entity/**/*.ts"],
     "migrations": ["src/migration/**/*.ts"],
     "subscribers": ["src/subscriber/**/*.ts"],
