--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -4,13 +4,21 @@
   "version": "1.0.16",
   "description": "Awesome project developed with TypeORM.",
   "devDependencies": {
+    "@graphql-codegen/add": "^1.12.1",
+    "@graphql-codegen/cli": "^1.12.1",
+    "@graphql-codegen/typescript": "^1.12.1",
+    "@graphql-codegen/typescript-operations": "^1.12.1",
+    "@graphql-codegen/typescript-react-apollo": "^1.12.1",
+    "@graphql-codegen/typescript-resolvers": "^1.12.1",
     "@types/ioredis": "^4.0.10",
     "@types/jest": "^24.0.11",
     "@types/node": "^11.11.2",
+    "@types/uuid": "^3.4.7",
     "cross-env": "^5.2.0",
     "jest": "^24.5.0",
     "ts-jest": "^24.0.0",
-    "ts-node-dev": "^1.0.0-pre.44"
+    "ts-node-dev": "^1.0.0-pre.44",
+    "typeorm-fixtures-cli": "^1.4.2"
   },
   "dependencies": {
     "@vitalic-classic/common": "^1.0.16",
@@ -24,12 +32,16 @@
     "fastify-server-session": "^3.0.1",
     "graphql-jit": "^0.4.2",
     "ioredis": "^4.6.2",
+    "merge-graphql-schemas": "^1.7.6",
     "pg": "^7.3.0",
+    "pino": "^5.16.0",
+    "pino-pretty": "^3.5.0",
     "reflect-metadata": "^0.1.10",
     "sqlite3": "^4.1.1",
     "ts-node": "^8.0.3",
     "typeorm": "0.2.15-rc.2",
-    "typescript": "^3.6"
+    "typescript": "^3.6",
+    "uuid": "^3.4.0"
   },
   "scripts": {
     "start": "ts-node-dev --no-notify src/index.ts",
@@ -37,7 +49,9 @@
     "ci:test": "JEST_JUNIT_OUTPUT=$TEST_OUTPUT/node.xml jest --ci --runInBand --detectOpenHandles --forceExit --testResultsProcessor=jest-junit",
     "ci:deploy": "npm run heroku:deploy",
     "heroku:deploy": "git push https://heroku:$HEROKU_API_KEY@git.heroku.com/insolution-prod.git master",
-    "typeorm": "ts-node ./node_modules/typeorm/cli.js"
+    "typeorm": "ts-node ./node_modules/typeorm/cli.js",
+    "fixtures": "node ./node_modules/typeorm-fixtures-cli/dist/cli.js",
+    "codegen": "./node_modules/.bin/graphql-codegen"
   },
   "workspaces": {
     "nohoist": [
