feat: add basic auth + apollo to web

--- a/package.json
+++ b/package.json
@@ -14,9 +14,16 @@
     "build:deps": "lerna run build --scope=@vitalic-classic/common",
     "heroku-prebuild": "node scripts/remove-workspaces.js",
     "heroku-postbuild": "node scripts/build-workspaces.js",
-    "lint": "eslint --max-warnings 0 --fix -c .eslintrc.js --ignore-path .gitignore --cache --ext .ts,.tsx ."
+    "lint": "eslint --max-warnings 0 --fix -c .eslintrc.js --ignore-path .gitignore --cache --ext .ts,.tsx .",
+    "codegen": "./node_modules/.bin/graphql-codegen"
   },
   "devDependencies": {
+    "@graphql-codegen/add": "^1.12.1",
+    "@graphql-codegen/cli": "^1.12.1",
+    "@graphql-codegen/typescript": "^1.12.1",
+    "@graphql-codegen/typescript-operations": "^1.12.1",
+    "@graphql-codegen/typescript-react-apollo": "^1.12.1",
+    "@graphql-codegen/typescript-resolvers": "^1.12.1",
     "@commitlint/cli": "^8.0.0",
     "@commitlint/config-conventional": "^8.0.0",
     "@typescript-eslint/eslint-plugin": "^1.4.2",
