--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -4,12 +4,6 @@
   "version": "1.0.16",
   "description": "Awesome project developed with TypeORM.",
   "devDependencies": {
-    "@graphql-codegen/add": "^1.12.1",
-    "@graphql-codegen/cli": "^1.12.1",
-    "@graphql-codegen/typescript": "^1.12.1",
-    "@graphql-codegen/typescript-operations": "^1.12.1",
-    "@graphql-codegen/typescript-react-apollo": "^1.12.1",
-    "@graphql-codegen/typescript-resolvers": "^1.12.1",
     "@types/ioredis": "^4.0.10",
     "@types/jest": "^24.0.11",
     "@types/node": "^11.11.2",
@@ -29,6 +23,7 @@
     "fastify-auth0-verify": "^0.2.0",
     "fastify-caching": "^5.0.0",
     "fastify-cookie": "^3.5.0",
+    "fastify-cors": "^3.0.1",
     "fastify-server-session": "^3.0.1",
     "graphql-jit": "^0.4.2",
     "ioredis": "^4.6.2",
@@ -50,8 +45,7 @@
     "ci:deploy": "npm run heroku:deploy",
     "heroku:deploy": "git push https://heroku:$HEROKU_API_KEY@git.heroku.com/insolution-prod.git master",
     "typeorm": "ts-node ./node_modules/typeorm/cli.js",
-    "fixtures": "node ./node_modules/typeorm-fixtures-cli/dist/cli.js",
-    "codegen": "./node_modules/.bin/graphql-codegen"
+    "fixtures": "node ./node_modules/typeorm-fixtures-cli/dist/cli.js"
   },
   "workspaces": {
     "nohoist": [
