--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -3,11 +3,13 @@
   "version": "1.0.16",
   "private": true,
   "dependencies": {
-    "@auth0/auth0-spa-js": "^1.6.3",
+    "@apollo/react-hooks": "^3.1.3",
     "@commitlint/cli": "^8.0.0",
     "@commitlint/config-conventional": "^8.0.0",
     "@material-ui/core": "^4.6.1",
     "@vitalic-classic/common": "^1.0.16",
+    "apollo-boost": "^0.4.7",
+    "auth0-js": "^9.12.2",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-react": "^7.12.4",
     "husky": "^3.0.9",
@@ -35,6 +37,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@types/auth0-js": "^9.12.3",
     "@types/history": "^4.7.4",
     "@types/jest": "^24.0.23",
     "@types/node": "^12.12.7",
