--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -7,7 +7,9 @@
     "@types/ioredis": "^4.0.10",
     "@types/jest": "^24.0.11",
     "@types/node": "^11.11.2",
+    "@types/pino": "^5.15.4",
     "@types/uuid": "^3.4.7",
+    "apollo-server-testing": "^2.9.16",
     "cross-env": "^5.2.0",
     "jest": "^24.5.0",
     "ts-jest": "^24.0.0",
@@ -40,7 +42,7 @@
   },
   "scripts": {
     "start": "ts-node-dev --no-notify src/index.ts",
-    "test": "cross-env NODE_ENV=test jest",
+    "test": "cross-env NODE_ENV=test jest --watch --runInBand",
     "ci:test": "JEST_JUNIT_OUTPUT=$TEST_OUTPUT/node.xml jest --ci --runInBand --detectOpenHandles --forceExit --testResultsProcessor=jest-junit",
     "ci:deploy": "npm run heroku:deploy",
     "heroku:deploy": "git push https://heroku:$HEROKU_API_KEY@git.heroku.com/insolution-prod.git master",
