--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -1,3 +1,4 @@
+// To do: add strict mode / noImplictAny
 {
   "compilerOptions": {
     "lib": ["dom", "es6", "es2017", "esnext.asynciterable"],
@@ -8,6 +9,9 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "sourceMap": true,
-    "allowSyntheticDefaultImports": true
-  }
+    "allowSyntheticDefaultImports": true,
+    "skipLibCheck": true
+  },
+  "include": ["src"],
+  "exclude": ["node_modules", "__tests__"]
 }
