refactor: organise generated files

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,5 @@ tmp/
 temp/
 dist
 .eslintcache
-packages/server/src/schema.graphql
-packages/server/src/@types/schema.ts
-packages/web/src/@types/graphql.ts
+packages/server/src/generated/graphql.ts
+packages/web/src/generated/graphql.ts
