--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -7,9 +7,11 @@
     "@commitlint/cli": "^8.0.0",
     "@commitlint/config-conventional": "^8.0.0",
     "@material-ui/core": "^4.6.1",
+    "@material-ui/icons": "^4.9.1",
     "@vitalic-classic/common": "^1.0.16",
     "apollo-boost": "^0.4.7",
     "auth0-js": "^9.12.2",
+    "clsx": "^1.1.0",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-react": "^7.12.4",
     "husky": "^3.0.9",
