--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,6 +33,7 @@ jobs:
             - ~/.cache/yarn
           key: yarn-packages-v1-{{ .Branch }}-{{ checksum "yarn.lock" }}
       - run: yarn build:deps
+      - run: yarn gen
       - run:
           name: "Linter"
           command: yarn lint --format junit -o reports/junit/js-lint-results.xml
