--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@vitalic-classic/common",
+  "name": "@medtrac/common",
   "version": "1.0.16",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
