--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@vitalic-classic/server",
+  "name": "@medtrac/server",
   "private": true,
   "version": "1.0.16",
   "description": "Awesome project developed with TypeORM.",
