chore: update package names

--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   },
   "scripts": {
     "ci:test": "lerna run ci:test",
-    "ci:deploy:server": "lerna run ci:deploy --scope=@vitalic-classic/server",
-    "ci:deploy:web": "lerna run ci:deploy --scope=@vitalic-classic/web",
-    "build:deps": "lerna run build --scope=@vitalic-classic/common",
+    "ci:deploy:server": "lerna run ci:deploy --scope=@medtrac/server",
+    "ci:deploy:web": "lerna run ci:deploy --scope=@medtrac/web",
+    "build:deps": "lerna run build --scope=@medtrac/common",
     "heroku-prebuild": "node scripts/remove-workspaces.js",
     "heroku-postbuild": "node scripts/build-workspaces.js",
     "lint": "eslint --max-warnings 0 --fix -c .eslintrc.js --ignore-path .gitignore --cache --ext .ts,.tsx .",
