--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -13,8 +13,7 @@
     "cross-env": "^5.2.0",
     "jest": "^24.5.0",
     "ts-jest": "^24.0.0",
-    "ts-node-dev": "^1.0.0-pre.44",
-    "typeorm-fixtures-cli": "^1.4.2"
+    "ts-node-dev": "^1.0.0-pre.44"
   },
   "dependencies": {
     "@medtrac/common": "^1.0.17",
@@ -38,7 +37,8 @@
     "ts-node": "^8.0.3",
     "typeorm": "0.2.15-rc.2",
     "typescript": "^3.6",
-    "uuid": "^3.4.0"
+    "uuid": "^3.4.0",
+    "typeorm-fixtures-cli": "^1.4.2"
   },
   "scripts": {
     "start": "ts-node-dev --no-notify src/index.ts",
