--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -9,6 +9,12 @@
     "@types/node": "^11.11.2",
     "@types/pino": "^5.15.4",
     "@types/uuid": "^3.4.7",
+    "@graphql-codegen/add": "^1.12.1",
+    "@graphql-codegen/cli": "^1.12.1",
+    "@graphql-codegen/typescript": "^1.12.1",
+    "@graphql-codegen/typescript-operations": "^1.12.1",
+    "@graphql-codegen/typescript-react-apollo": "^1.12.1",
+    "@graphql-codegen/typescript-resolvers": "^1.12.1",
     "apollo-server-testing": "^2.9.16",
     "cross-env": "^5.2.0",
     "jest": "^24.5.0",
@@ -47,7 +53,8 @@
     "ci:deploy": "npm run heroku:deploy",
     "heroku:deploy": "git push https://heroku:$HEROKU_API_KEY@git.heroku.com/insolution-prod.git master",
     "typeorm": "ts-node ./node_modules/typeorm/cli.js",
-    "fixtures": "node ./node_modules/typeorm-fixtures-cli/dist/cli.js"
+    "fixtures": "node ./node_modules/typeorm-fixtures-cli/dist/cli.js",
+    "gen": "./node_modules/.bin/graphql-codegen"
   },
   "workspaces": {
     "nohoist": [
