--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -30,7 +30,8 @@
     "eject": "react-scripts eject",
     "ci:test": "JEST_JUNIT_OUTPUT=$TEST_OUTPUT/react.xml npm run test -- --ci --runInBand --detectOpenHandles --forceExit --testResultsProcessor=jest-junit",
     "ci:deploy": "npm run heroku:deploy",
-    "heroku:deploy": "git push https://heroku:$HEROKU_API_KEY@git.heroku.com/insulution-web.git master"
+    "heroku:deploy": "git push https://heroku:$HEROKU_API_KEY@git.heroku.com/insulution-web.git master",
+    "gen": "./node_modules/.bin/graphql-codegen"
   },
   "browserslist": [
     ">0.2%",
@@ -46,6 +47,12 @@
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.4",
     "@types/react-router-dom": "^5.1.3",
+    "@graphql-codegen/add": "^1.12.1",
+    "@graphql-codegen/cli": "^1.12.1",
+    "@graphql-codegen/typescript": "^1.12.1",
+    "@graphql-codegen/typescript-operations": "^1.12.1",
+    "@graphql-codegen/typescript-react-apollo": "^1.12.1",
+    "@graphql-codegen/typescript-resolvers": "^1.12.1",
     "cross-env": "^5.2.0",
     "eslint": "^6.8.0",
     "prettier": "^1.19.1",
