build: commit generated types

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "ci:deploy:web": "lerna run ci:deploy --scope=@medtrac/web",
     "build:deps": "lerna run build --scope=@medtrac/common",
     "heroku-prebuild": "node scripts/remove-workspaces.js",
-    "heroku-postbuild": "yarn gen && node scripts/build-workspaces.js",
+    "heroku-postbuild": "node scripts/build-workspaces.js",
     "lint": "eslint --max-warnings 0 --fix -c .eslintrc.js --ignore-path .gitignore --cache --ext .ts,.tsx .",
     "gen": "lerna run gen"
   },
