--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -4,17 +4,17 @@
   "version": "1.0.17",
   "description": "Awesome project developed with TypeORM.",
   "devDependencies": {
-    "@types/ioredis": "^4.0.10",
-    "@types/jest": "^24.0.11",
-    "@types/node": "^11.11.2",
-    "@types/pino": "^5.15.4",
-    "@types/uuid": "^3.4.7",
     "@graphql-codegen/add": "^1.12.1",
     "@graphql-codegen/cli": "^1.12.1",
     "@graphql-codegen/typescript": "^1.12.1",
     "@graphql-codegen/typescript-operations": "^1.12.1",
     "@graphql-codegen/typescript-react-apollo": "^1.12.1",
     "@graphql-codegen/typescript-resolvers": "^1.12.1",
+    "@types/ioredis": "^4.0.10",
+    "@types/jest": "^24.0.11",
+    "@types/node": "^11.11.2",
+    "@types/pino": "^5.15.4",
+    "@types/uuid": "^3.4.7",
     "apollo-server-testing": "^2.9.16",
     "cross-env": "^5.2.0",
     "jest": "^24.5.0",
@@ -25,6 +25,7 @@
     "@medtrac/common": "^1.0.17",
     "apollo-server-express": "^2.9.16",
     "apollo-server-fastify": "^2.9.16",
+    "dotenv-safe": "^8.2.0",
     "faker": "^4.1.0",
     "fastify": "^2.11.0",
     "fastify-auth0-verify": "^0.2.0",
@@ -42,9 +43,9 @@
     "sqlite3": "^4.1.1",
     "ts-node": "^8.0.3",
     "typeorm": "0.2.15-rc.2",
+    "typeorm-fixtures-cli": "^1.4.2",
     "typescript": "^3.6",
-    "uuid": "^3.4.0",
-    "typeorm-fixtures-cli": "^1.4.2"
+    "uuid": "^3.4.0"
   },
   "scripts": {
     "start": "ts-node-dev --no-notify src/index.ts",
