refactor: add support for production database

--- a/packages/server/ormconfig.json
+++ b/packages/server/ormconfig.json
@@ -2,7 +2,7 @@
   {
     "name": "production",
     "type": "postgres",
-    "synchronize": true,
+    "synchronize": false,
     "logging": true,
     "entities": ["src/entity/**/*.ts"],
     "migrations": ["src/migration/**/*.ts"],
