build: add initial database migration

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build:deps": "lerna run build --scope=@medtrac/common",
     "heroku-prebuild": "node scripts/remove-workspaces.js",
     "heroku-postbuild": "node scripts/build-workspaces.js",
-    "lint": "eslint --max-warnings 0 --fix -c .eslintrc.js --ignore-path .gitignore --cache --ext .ts,.tsx .",
+    "lint": "eslint --max-warnings 0 --fix -c .eslintrc.js --ignore-path .gitignore --ignore-pattern packages/server/src/migration/*.ts --cache --ext .ts,.tsx .",
     "gen": "lerna run gen"
   },
   "devDependencies": {
