chore: upgrade typeorm

--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     }
   },
   "lint-staged": {
-    "packages/**/src/**/*.{ts,tsx}": [
+    "packages/**/src/!(migration)/**/*.{ts,tsx}": [
       "yarn run --silent lint",
       "git add"
     ]
