--- a/packages/server/ormconfig.json
+++ b/packages/server/ormconfig.json
@@ -14,7 +14,7 @@
     }
   },
   {
-    "name": "default",
+    "name": "development",
     "type": "sqlite",
     "database": ":memory:",
     "synchronize": true,
