--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -42,7 +42,7 @@
     "reflect-metadata": "^0.1.10",
     "sqlite3": "^4.1.1",
     "ts-node": "^8.0.3",
-    "typeorm": "0.2.15-rc.2",
+    "typeorm": "^0.2.22",
     "typeorm-fixtures-cli": "^1.4.2",
     "typescript": "^3.6",
     "uuid": "^3.4.0"
