--- a/packages/server/ormconfig.json
+++ b/packages/server/ormconfig.json
@@ -15,9 +15,13 @@
   },
   {
     "name": "development",
-    "type": "sqlite",
-    "database": ":memory:",
-    "synchronize": true,
+    "type": "postgres",
+    "host": "localhost",
+    "port": 5432,
+    "username": "postgres",
+    "password": "root",
+    "database": "medtrac",
+    "synchronize": false,
     "logging": true,
     "entities": ["src/entity/**/*.ts"],
     "migrations": ["src/migration/**/*.ts"],
