test: add react tests

--- a/packages/web/tsconfig.json
+++ b/packages/web/tsconfig.json
@@ -16,5 +16,13 @@
     "jsx": "react"
   },
   "include": ["src"],
-  "exclude": ["node_modules"]
+  "exclude": [
+    "node_modules",
+    "build",
+    "scripts",
+    "acceptance-tests",
+    "webpack",
+    "jest",
+    "src/setupTests.ts"
+  ]
 }
