--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -24,9 +24,9 @@
     "typescript": "^3.7.2"
   },
   "scripts": {
-    "start": "cross-env SKIP_PREFLIGHT_CHECK=true react-scripts start",
-    "build": "cross-env SKIP_PREFLIGHT_CHECK=true react-scripts build",
-    "test": "cross-env SKIP_PREFLIGHT_CHECK=true react-scripts test",
+    "start": "cross-env SKIP_PREFLIGHT_CHECK=true react-app-rewired start",
+    "build": "cross-env SKIP_PREFLIGHT_CHECK=true react-app-rewired build",
+    "test": "cross-env SKIP_PREFLIGHT_CHECK=true react-app-rewired test --runInBand",
     "eject": "react-scripts eject",
     "ci:test": "JEST_JUNIT_OUTPUT=$TEST_OUTPUT/react.xml npm run test -- --ci --runInBand --detectOpenHandles --forceExit --testResultsProcessor=jest-junit",
     "ci:deploy": "npm run heroku:deploy",
@@ -40,12 +40,15 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@apollo/react-testing": "^3.1.3",
     "@graphql-codegen/add": "^1.12.1",
     "@graphql-codegen/cli": "^1.12.1",
     "@graphql-codegen/typescript": "^1.12.1",
     "@graphql-codegen/typescript-operations": "^1.12.1",
     "@graphql-codegen/typescript-react-apollo": "^1.12.1",
     "@graphql-codegen/typescript-resolvers": "^1.12.1",
+    "@testing-library/jest-dom": "^5.1.1",
+    "@testing-library/react": "^9.4.1",
     "@types/auth0-js": "^9.12.3",
     "@types/history": "^4.7.4",
     "@types/jest": "^24.0.23",
@@ -53,10 +56,21 @@
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.4",
     "@types/react-router-dom": "^5.1.3",
+    "@types/testing-library__jest-dom": "^5.0.1",
+    "@types/testing-library__react": "^9.1.2",
     "cross-env": "^5.2.0",
     "eslint": "^6.8.0",
     "prettier": "^1.19.1",
     "typescript": "^3.7.2"
   },
-  "proxy": "http://localhost:3001"
+  "proxy": "http://localhost:3001",
+  "jest": {
+    "watchPathIgnorePatterns": [
+      "/__utils",
+      "/__mocks",
+      "/generated/",
+      "/.git/",
+      "/.history/"
+    ]
+  }
 }
