--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,6 +21,7 @@ jobs:
     working_directory: ~/repo
     steps:
       - checkout
+      - run: npm config set scripts-prepend-node-path true
       - restore_cache:
           keys:
             # when lock file changes, use increasingly general patterns to restore cache
