ci: fix npm binary error

--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -28,7 +28,7 @@
     "build": "cross-env SKIP_PREFLIGHT_CHECK=true react-app-rewired build",
     "test": "cross-env SKIP_PREFLIGHT_CHECK=true react-app-rewired test --runInBand",
     "eject": "react-scripts eject",
-    "ci:test": "JEST_JUNIT_OUTPUT=$TEST_OUTPUT/react.xml npm run test -- --ci --runInBand --detectOpenHandles --forceExit --testResultsProcessor=jest-junit",
+    "ci:test": "JEST_JUNIT_OUTPUT=$TEST_OUTPUT/react.xml react-scripts test --ci --runInBand --detectOpenHandles --forceExit --testResultsProcessor=jest-junit",
     "ci:deploy": "npm run heroku:deploy",
     "heroku:deploy": "git push https://heroku:$HEROKU_API_KEY@git.heroku.com/insulution-web.git master",
     "gen": "./node_modules/.bin/graphql-codegen"
