--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -24,8 +24,8 @@
     "typescript": "^3.7.2"
   },
   "scripts": {
-    "start": "cross-env SKIP_PREFLIGHT_CHECK=true react-app-rewired start",
-    "build": "cross-env SKIP_PREFLIGHT_CHECK=true react-app-rewired build",
+    "start": "cross-env SKIP_PREFLIGHT_CHECK=true react-scripts start",
+    "build": "cross-env SKIP_PREFLIGHT_CHECK=true react-scripts build",
     "test": "cross-env SKIP_PREFLIGHT_CHECK=true react-app-rewired test --runInBand",
     "eject": "react-scripts eject",
     "ci:test": "SKIP_PREFLIGHT_CHECK=true JEST_JUNIT_OUTPUT=$TEST_OUTPUT/react.xml react-scripts test --ci --runInBand --detectOpenHandles --forceExit --testResultsProcessor=jest-junit",
