--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -50,6 +50,7 @@
     "@testing-library/jest-dom": "^5.1.1",
     "@testing-library/react": "^9.4.1",
     "@types/auth0-js": "^9.12.3",
+    "@types/css-mediaquery": "^0.1.0",
     "@types/history": "^4.7.4",
     "@types/jest": "^24.0.23",
     "@types/node": "^12.12.7",
@@ -59,8 +60,10 @@
     "@types/testing-library__jest-dom": "^5.0.1",
     "@types/testing-library__react": "^9.1.2",
     "cross-env": "^5.2.0",
+    "css-mediaquery": "^0.1.2",
     "eslint": "^6.8.0",
     "prettier": "^1.19.1",
+    "react-app-rewired": "^2.1.5",
     "typescript": "^3.7.2"
   },
   "proxy": "http://localhost:3001",
